--- a/seminarTable.html
+++ b/seminarTable.html
@@ -4,57 +4,56 @@
 <head>
     <title>Seminar Table</title>
 </head>
+<!-- Just Focus on row cells of table  -->
 
 <body>
     <table>
         <tr>
-            <th rowspan="3">Day </th>
-            <th colspan="4">Seminar</th>
+            <th rowspan="3" style="border: solid ;">Day </th>
+            <th colspan="4" style="border: solid;">Seminar</th>
 
         </tr>
         <tr>
-            <th colspan="2">Schedule</th>
-            <th rowspan="2" colspan="2">Topic</th>
+            <th colspan="2" style="border: solid;">Schedule</th>
+            <th rowspan="2 style=" border: solid;"" colspan="2">Topic</th>
         </tr>
         <tr>
-            <th>Begin</th>
-            <th>End</th>
+            <th style="border: solid;">Begin</th>
+            <th style="border: solid;">End</th>
         </tr>
         <tr>
-            <td rowspan="2">Monday</td>
-            <td rowspan="2">8 am</td>
-            <td rowspan="2">5 pm</td>
-            <td colspan="2">Introdution to XML</td>
+            <td rowspan="2" style="border: solid;">Monday</td>
+            <td rowspan="2" style="border: solid;"> 8 am</td>
+            <td rowspan="2" style="border: solid;">5 pm</td>
+            <td colspan="2" style="border: solid;">Introdution to XML</td>
         </tr>
         <tr>
-            <td colspan="2">Validity: DTD and Relax NG</td>
+            <td colspan="2" style="border: solid;">Validity: DTD and Relax NG</td>
         </tr>
         <tr>
-            <td rowspan="3">Tuesday</td>
-            <td>8 am</td>
-            <td>11 am</td>
+            <td rowspan="3" style="border: solid;">Tuesday</td>
+            <td style="border: solid;">8 am</td>
+            <td style="border: solid;">11 am</td>
 
         </tr>
         <tr>
-            <td>11 am</td>
-            <td>2 pm</td>
-            <td colspan="2" rowspan="1.5">XP Path</td>
+            <td style="border: solid;">11 am</td>
+            <td style="border: solid;">2 pm</td>
+            <td colspan="2" rowspan="1.5" style="border: solid;">XP Path</td>
         </tr>
         <tr>
-            <td>2 pm</td>
-            <td>5 pm</td>
-            <td colspan="2" rowspan="1.5">XSL Transformation</td>
+            <td style="border: solid;">2 pm</td>
+            <td style="border: solid;">5 pm</td>
+            <td colspan="2" rowspan="1.5 style=" border: solid;"">XSL Transformation</td>
         </tr>
         <tr>
-            <td>Wedenesday</td>
-            <td>8 am</td>
-            <td>12 pm</td>
-            <td colspan="2">XSL Formatting Objects</td>
+            <td style="border: solid;">Wedenesday</td>
+            <td style="border: solid;">8 am</td>
+            <td style="border: solid;">12 pm</td>
+            <td colspan="2" style="border: solid;">XSL Formatting Objects</td>
         </tr>
     </table>
 
 </body>
 
 </html>
-
-file:///D:/DSA%20Code/newfolder6/html/seminarTable.html
