--- a/seminarTable.html
+++ b/seminarTable.html
@@ -44,7 +44,7 @@
         <tr>
             <td style="border: solid;">2 pm</td>
             <td style="border: solid;">5 pm</td>
-            <td colspan="2" rowspan="1.5 style=" border: solid;"">XSL Transformation</td>
+            <td colspan="2" rowspan="1.5" style="border: solid">XSL Transformation</td>
         </tr>
         <tr>
             <td style="border: solid;">Wedenesday</td>
