--- a/seminarTable.html
+++ b/seminarTable.html
@@ -15,7 +15,7 @@
         </tr>
         <tr>
             <th colspan="2" style="border: solid;">Schedule</th>
-            <th rowspan="2 style=" border: solid;"" colspan="2">Topic</th>
+            <th rowspan="2" style=" border: solid;" colspan="2">Topic</th>
         </tr>
         <tr>
             <th style="border: solid;">Begin</th>
